add error control for customers